# EncodingForCNN

./: CMakeLists.txt  Readme.md
bolt/: CMakeLists.txt  main.cpp  module.h  module_old.h  tensor.h  utils.h
bolt_fpga/: CMakeLists.txt  bolt.py  main.cpp  module.h
bolt_fpga/bolt/: mega_ag.json  task_signature.json
channel_fpga/: CMakeLists.txt  channel.py  main.cpp  module.h
channel_fpga/channel_0/: mega_ag.json  task_signature.json
channel_fpga/channel_bsgs_0/: mega_ag.json  task_signature.json
neujeans/: CMakeLists.txt  main.cpp  module.h
neujeans_fpga/: CMakeLists.txt  main.cpp  module.h  neujeans.py  utils.h
neujeans_fpga/neujeans0/: mega_ag.json  task_signature.json
neujeans_fpga/neujeans_0/: mega_ag.json  task_signature.json
res_nj_fpga/: CMakeLists.txt  coeff_resnet18_fpga.py  main.cpp  module.h  resnet18_fpga.py  tensor.h
res_plain/: CMakeLists.txt  main.cpp  module.h  tensor.h  utils.h
tests/: CMakeLists.txt  main.cpp  test.py
tests/test_mult/: mega_ag.json  task_signature.json
tests/test_rotation/: mega_ag.json  task_signature.json
